<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sk.upjs.ics.refwallet.RegistraciaActivity"
    android:orientation="vertical"
    style="@style/Pozadie"
    android:weightSum="1">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/menoReg"
                    android:id="@+id/textMeno"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:id="@+id/editMeno"
                    android:layout_column="1"
                    android:hint="@string/user_nameRe"
                    android:inputType="textPersonName" />

            </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/hesloReg"
                android:id="@+id/textHeslo"
                android:layout_column="0" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:id="@+id/editHeslo"
                android:layout_column="1"
                android:hint="@string/hesloReg2"
                android:inputType="textPassword" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/opakujReg"
                android:id="@+id/textHeslo2"
                android:layout_column="0" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:id="@+id/editHeslo2"
                android:layout_column="1"
                android:hint="@string/hesloReg3"
                android:inputType="textPassword" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/financieReg"
                android:id="@+id/textFinancie"
                android:layout_column="0" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:id="@+id/editFinancie"
                android:layout_column="1"
                android:hint="@string/zadajFinanReg"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingTop="10dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/registrujReg"
                android:id="@+id/btnRegistruj"
                android:onClick="Registruj"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />
        </TableRow>

        </TableLayout>
    </ScrollView>

</LinearLayout>

