<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Prihlasenie_activity"
    style="@style/Pozadie"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:id="@+id/nazovActivity">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/prihlasenie"
                android:id="@+id/textPrihlasenie"
                android:textStyle="bold"
                android:textSize="25dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/menoHeslo">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editMeno"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:textColorHint="#302D2D" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editHeslo"
                android:hint="@string/heslo"
                android:textColorHint="#302D2D" />
        </LinearLayout>



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:paddingTop="20dp">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnprihlasit"
                android:background="@android:drawable/alert_light_frame"
                android:id="@+id/btnPrihlasenie"
                android:onClick="Prihlasenie"
                android:singleLine="false" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registracia"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/btnRegistracia"
                android:id="@+id/textRegistracia"
                android:textColor="#000000"
                android:textStyle="italic"
                android:onClick="Registracia"
                android:gravity="end"
                android:paddingRight="10dp"
                android:textSize="20dp"
                android:singleLine="false" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
