<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sk.upjs.ics.wallet.VyberActivity"
    android:orientation="vertical"
    style="@style/Pozadie">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/financieVyb"
                    android:id="@+id/textFinancie"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/editFinancie"
                    android:layout_column="1"
                    android:gravity="center" />

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:paddingTop="10dp">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/vyberVkladVyb"
                    android:id="@+id/btnZoznam"
                    android:onClick="vyberZoznam"
                    android:layout_gravity="center_vertical"
                    android:background="@android:drawable/alert_light_frame"
                    android:layout_weight="1" />

            </TableRow>
            <TableRow
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:paddingTop="10dp">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bankomatyVyb"
                    android:id="@+id/btnBankomaty"
                    android:onClick="bankomaty"
                    android:layout_gravity="center_vertical"
                    android:background="@android:drawable/alert_light_frame"
                    android:layout_weight="1" />

            </TableRow>
            <TableRow
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:paddingTop="10dp">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/statistikyVyb"
                    android:id="@+id/btnStatistiky"
                    android:onClick="statistiky"
                    android:layout_gravity="center_vertical"
                    android:background="@android:drawable/alert_light_frame"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:paddingTop="10dp">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/odfotVyb"
                    android:id="@+id/btnFoto"
                    android:onClick="fotky"
                    android:layout_gravity="center_vertical"
                    android:background="@android:drawable/alert_light_frame"
                    android:layout_weight="1" />

            </TableRow>

        </TableLayout>
    </ScrollView>
</LinearLayout>

