<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sk.upjs.ics.wallet.BankomatyActivity"
    android:orientation="vertical"
    style="@style/Pozadie">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">
         <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="0dp">

             <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/najdiBankBank"
                 android:id="@+id/btnNajdiBankomat"
                 android:layout_column="0"
                 android:layout_weight="0.4"
                 android:layout_gravity="center_vertical"
                 android:background="@android:drawable/alert_light_frame"
                 android:onClick="najdiBankomat" />

             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:id="@+id/textVzdialenost"
                 android:layout_gravity="center_vertical"
                 android:layout_column="1"
                 android:layout_weight="0.6"
                 android:hint="@string/vzdialenostBank"
                 android:gravity="center" />

             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/metrovBank"
                 android:id="@+id/textView"
                 android:layout_column="2"
                 android:layout_weight="0.3"
                 android:layout_gravity="center_vertical" />
         </TableRow>
    </TableLayout>

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

</LinearLayout>
